<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/pic123"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/btnSignUp"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/btnSignUp"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:text="@string/auth"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>

    <ImageView
        android:layout_width="317dp"
        android:layout_height="208dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/app_name"
        android:foregroundGravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/spoon" />

    <TextView
        android:layout_width="204dp"
        android:layout_height="85dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="401dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/slogan"
        android:textColor="@color/text_slogan"
        android:textSize="18sp" />

</RelativeLayout>