<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic150"
    tools:context=".FoodDetail">

    <LinearLayout
        android:id="@+id/mainLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <ImageView
        android:id="@+id/mainPhoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/meat" />

    <TextView
        android:id="@+id/foodMainName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-40dp"
        android:background="#A8749E89"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A8749E89"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/text_slogan"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/foodFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A8749E89"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainLinear"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btnSignUp"
            android:fontFamily="@font/montserrat"
            android:onClick="btnAddToCart"
            android:padding="10dp"
            android:text="@string/addToCart"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_marginEnd="15dp"/>

        <Button
            android:id="@+id/btnGoToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btnSignUp"
            android:fontFamily="@font/montserrat"
            android:onClick="btnAddToCart"
            android:padding="10dp"
            android:text="@string/goToCart"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>